--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,14 +1,10 @@
 @use "john";
 
 footer {
-  position: absolute;
-  inset-block-end: 0;
   min-inline-size: 100%;
 }
 
 #backtotop {
-  position: absolute;
-  inset-block-end: 0;
   image-rendering: crisp-edges;
   display: block;
   aspect-ratio: auto 443/65;
